--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_dashboard">Списки</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_search">Поиск</string>
+    <string name="title_profile">Профиль</string>
 </resources>
