--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="title_dashboard">Списки</string>
     <string name="title_search">Поиск</string>
     <string name="title_profile">Профиль</string>
+    <string name="maybe_youll_like">Возможно, Вам понравится</string>
+    <string name="watch_new_film">Посмотрите новый фильм</string>
 </resources>
