Loading screens added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="title_profile">Профиль</string>
     <string name="maybe_youll_like">Возможно, Вам понравится</string>
     <string name="watch_new_film">Посмотрите новый фильм</string>
+    <string name="subscribe_friends_updates">Подписывайтесь на обновления друзей!</string>
+    <string name="next">Далее</string>
+    <string name="share_movies">Делитесь любимыми фильмами и сериалами!</string>
+    <string name="login_with_google">Войти с помощью Google</string>
 </resources>
