--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,13 @@
 <resources>
     <string name="app_name">Kinotech App v1</string>
+    <string name="api_key">6b189dca-0b75-4223-9fac-c89f2d2ec5a2</string>
     <string name="title_feed">Лента</string>
     <string name="title_dashboard">Списки</string>
     <string name="title_search">Поиск</string>
     <string name="title_profile">Профиль</string>
+    <string name="input_film_name">Введите название фильма/сериала...</string>
+    <string name="find_button">Найти!</string>
+    <string name="guide_text_search">Ищите любимые фильмы
+и сериалы с помощью поиска  наверху!</string>
+
 </resources>
