Auth without signOut, added AuthActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="find_button">Найти!</string>
     <string name="guide_text_search">Ищите любимые фильмы
 и сериалы с помощью поиска  наверху!</string>
+    <string name="server_client_id">1096042858796-qtkubuc2p5adcpbiq5utv9vnasnamksr.apps.googleusercontent.com</string>
 
 </resources>
