--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="title_subscriptions">0\nподписки</string>
     <string name="title_change_profile">Изменить профиль</string>
     <string name="title_show_all">Показать все</string>
+    <string name="title_change_photo">Изменить фото профиля</string>
+    <string name="title_change_name">Изменить имя профиля</string>
+    <string name="title_save">Сохранить</string>
 </resources>
