--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="change_name_string">Новое имя профиля</string>
     <string name="save_string">Сохранить</string>
     <string name="change_profile_title_string">Изменить профиль</string>
+    <string name="share_link">Поделиться</string>
+    <string name="open_list">Открыть список</string>
+    <string name="delete_list">Удалить список</string>
 </resources>
