--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,9 +18,9 @@
     <string name="rate_film">Estima la película</string>
     <string name="search_result">Busca resultados</string>
     <string name="profile_name_string">Nombre del perfil</string>
-    <string name="playlists_string">0 listas</string>
-    <string name="subscribers_string">0 suscriptores</string>
-    <string name="subscriptions_string">0 suscripciones</string>
+    <string name="playlists_string">0\nlistas</string>
+    <string name="subscribers_string">0\nsuscriptores</string>
+    <string name="subscriptions_string">0\nsuscripciones</string>
     <string name="change_profile_string">Cambiar perfil</string>
     <string name="show_all_string">Mostrar todo</string>
     <string name="change_photo_string">Cambiar foto de perfil</string>
@@ -31,4 +31,9 @@
     <string name="search_friends">Busca amigos usando busca arriba!</string>
     <string name="input_friend_name">Escribe nombre de amigo</string>
     <string name="subscribe_string">Suscribir</string>
+    <string name="change_profile_title_string">Cambiar perfil</string>
+    <string name="delete_list">Borrar lista</string>
+    <string name="open_list">Abrir lista</string>
+    <string name="share_link">Compartir</string>
+    <string name="subscribed">Suscribido</string>
 </resources>
