--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name" translatable="false">Kinotech App v1</string>
+    <string name="app_name" translatable="false">Kinotech App</string>
     <string name="title_feed">Лента</string>
     <string name="title_lists">Списки</string>
     <string name="title_search">Поиск</string>
